application-cloud-transformation-automation-workbench/lib/templates/dotnetTemplate/Azure/AKS/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ProjectNameXXX-api
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: ProjectNameXXX-api
